[gd_scene load_steps=16 format=3 uid="uid://sfpb1cjm626"]

[ext_resource type="Script" uid="uid://ce65xu4ojmw1h" path="res://Scripts/Enemy/range_enemy.gd" id="1_7t0vl"]
[ext_resource type="PackedScene" uid="uid://cn0n706vi8jmq" path="res://Scenes/Enemy/Bullets/big_enemy_bullets.tscn" id="2_ncmus"]
[ext_resource type="Texture2D" uid="uid://brqlaawdbiehk" path="res://assets/enemies/tank_cat_idle_and_shooting_animation_sprite_sheet.png" id="3_7t0vl"]
[ext_resource type="AudioStream" uid="uid://wgx7vvcl8n1c" path="res://assets/sounds/big_firing.wav" id="3_ncmus"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ffmqd"]
radius = 26.7136

[sub_resource type="AtlasTexture" id="AtlasTexture_ncmus"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 0, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_usx5y"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 130, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4n6k"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 260, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uc85"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 650, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_piw3r"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 780, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_n14o2"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 520, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_m86f5"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 390, 98, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_hecu4"]
atlas = ExtResource("3_7t0vl")
region = Rect2(0, 0, 98, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_7t0vl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncmus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usx5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4n6k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uc85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piw3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uc85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n14o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m86f5")
}],
"loop": false,
"name": &"shooting",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hecu4")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u88co"]
radius = 0.599637
height = 1.28905

[node name="RangeEnemy" type="RigidBody3D" groups=["Enemy"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_7t0vl")
shooting_delay = 5.0
shooting_speed = 20.0
shooting_damage = 40.0
bullet_scene = ExtResource("2_ncmus")
speed = 5.0

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ncmus")
attenuation_model = 1
volume_db = 7.619

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MaxDetectionRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74878, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MaxDetectionRange"]
shape = SubResource("SphereShape3D_ffmqd")

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.696268, 0)
pixel_size = 0.015
sprite_frames = SubResource("SpriteFrames_7t0vl")
animation = &"shooting"
frame = 4
frame_progress = 1.0

[node name="BulletPoint" type="Node3D" parent="Sprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49365, 0.814538, 0.126605)

[node name="HitBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.632954, 0)
shape = SubResource("CapsuleShape3D_u88co")
debug_color = Color(0, 0.992157, 0.0588235, 0.419608)

[connection signal="body_entered" from="MaxDetectionRange" to="." method="_on_body_entered"]
[connection signal="body_exited" from="MaxDetectionRange" to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Sprite3D" to="." method="_on_sprite_3d_animation_finished"]
